# VerseFinder

./: .gitignore  ACCESSIBILITY.md  CHURCH_INTEGRATION.md  CLAUDE.md  CMakeLists.txt  CUSTOMIZATION.md  FUZZY_SEARCH_DOCUMENTATION.md  FUZZY_SEARCH_PERFORMANCE.md  NAVIGATION_FIX_RESULTS.md  PRESENTATION_FEATURES.md  PRESENTATION_MODE.md  README.md  RELIABILITY_SUMMARY.md  UI_DEMO.md  animation_demo  animation_demo.cpp  build.bat  build.sh  cmake_output.txt  comprehensive_demo  comprehensive_demo.cpp  debug_navigation.cpp  demo_visual  final_validation  final_validation.cpp  imgui.ini  integration_test  integration_test_simple  integration_test_simple.cpp  performance_test  presentation_config.json  presentation_features_demo.cpp  quick_test  sample_bible.json  test_accessibility  test_advanced_features  test_mobile_api.sh  test_multi_translation  test_navigation  test_navigation.cpp  (+7 more)
.github/workflows/: ci.yml  release.yml
mobile/: README.md  app.js  demo.html  index.html  manifest.json  style.css  sw.js
recovery/: backup_session.json
src/: main.cpp  opengl_loader.h
src/api/: ApiServer.cpp  ApiServer.h  MobileAPI.cpp  MobileAPI.h  WebSocketServer.cpp  WebSocketServer.h
src/core/: AutoComplete.cpp  AutoComplete.h  BackupManager.h  CrashRecoverySystem.cpp  CrashRecoverySystem.h  CrossReferenceSystem.cpp  CrossReferenceSystem.h  EmergencyModeHandler.h  ErrorHandler.cpp  ErrorHandler.h  FuzzySearch.cpp  FuzzySearch.h  HealthMonitor.cpp  HealthMonitor.h  HttpClient.cpp  HttpClient.h  IncrementalSearch.cpp  IncrementalSearch.h  MemoryMonitor.cpp  MemoryMonitor.h  PerformanceBenchmark.cpp  PerformanceBenchmark.h  ReliabilityManager.cpp  ReliabilityManager.h  SearchAnalytics.cpp  SearchAnalytics.h  SearchCache.cpp  SearchCache.h  SearchOptimizer.cpp  SearchOptimizer.h  SemanticSearch.cpp  SemanticSearch.h  TopicManager.cpp  TopicManager.h  UserSettings.cpp  UserSettings.h  VerseFinder.cpp  VerseFinder.h
src/integrations/: IntegrationManager.cpp  IntegrationManager.h  IntegrationProvider.h  PlanningCenterProvider.cpp  PlanningCenterProvider.h
src/plugins/api/: PluginAPI.h
src/plugins/examples/: CMakeLists.txt  CMakeLists.txt.bak  README.md  demo_pdf_export.cpp  enhanced_search_plugin.cpp  john3_16.html  pdf_export_demo  pdf_export_demo.cpp  pdf_export_plugin.cpp  service_plan.html  service_verses.html  simple_ui_plugin.cpp
src/plugins/interfaces/: PluginInterfaces.h
src/plugins/loader/: PluginLoader.h
src/plugins/manager/: PluginManager.cpp  PluginManager.h
src/plugins/scripting/: LuaScriptEngine.h
src/plugins/sdk/: PLUGIN_DEVELOPMENT_GUIDE.md  README.md
src/plugins/sdk/templates/: CMakeLists.txt  plugin_template.cpp
src/plugins/security/: PluginSecurity.cpp  PluginSecurity.h
src/plugins/test/: plugin_test.cpp
src/service/: ServicePlan.cpp  ServicePlan.h
src/ui/: MaterialIcons.h  VerseFinderApp.cpp  VerseFinderApp.h  VerseFinderApp_New.h  VerseFinderApp_Original.cpp  VerseFinderApp_Original.h  VerseFinderApp_Simplified.cpp
src/ui/accessibility/: AccessibilityManager.cpp  AccessibilityManager.h
src/ui/common/: TranslationManager.h
src/ui/components/: PluginManagerWindow.cpp  PluginManagerWindow.h  PresentationWindow.cpp  PresentationWindow.h  ResultsComponent.h  SearchComponent.cpp  SearchComponent.h  TranslationComparison.cpp  TranslationComparison.h  TranslationSelector.cpp  TranslationSelector.h
src/ui/effects/: AnimationSystem.cpp  AnimationSystem.h  MediaManager.cpp  MediaManager.h  PresentationEffects.cpp  PresentationEffects.h
src/ui/modals/: SettingsModal.cpp  SettingsModal.h  TranslationManagerModal.cpp  TranslationManagerModal.h
src/ui/settings/: ThemeManager.cpp  ThemeManager.h
src/ui/system/: FileManager.cpp  FileManager.h  FontManager.cpp  FontManager.h  PlatformUtils.cpp  PlatformUtils.h  WindowManager.cpp  WindowManager.h
test/: README.md  demo_visual.cpp  integration_test.cpp  integration_test_simple.cpp  performance_test.cpp  quick_test.cpp  test_accessibility.cpp  test_advanced_features.cpp  test_comparison.cpp  test_multi_translation.cpp  ui_test.cpp  validation_test.cpp
